# LeapMotion_HandTracking

./: .gitignore  CMakeLists.txt  CalibData.cpp  CalibData.h  CalibrationApp.cpp  CalibrationApp.h  CalibrationArea.cpp  CalibrationConsoleApp.cpp  CalibrationConsoleApp.h  GestureRecognizer.cpp  GestureRecognizer.h  LeapConnection.cpp  LeapConnection.h  LeapConnectionSerializer.cpp  LeapConnectionSerializer.h  MouseEmulationApp.cpp  MouseEmulationApp.h  README.md  README.md.bak  TrackingApp.cpp  TrackingApp.h  Utils.cpp  Utils.h  config.txt  main.cpp  review.txt
LeapSDK/include/: LeapC.h
LeapSDK/lib/cmake/LeapSDK/: leapsdk-configVersion.cmake
LeapSDK/lib/x64/: LeapC.lib
LeapSDK/samples/: CMakeLists.txt  MultiDeviceSample.c
app_calibration/: CMakeLists.txt  CalibrationConsoleApp.cpp  CalibrationConsoleApp.h  main.cpp
app_drawing/: CMakeLists.txt  TrackingApp.cpp  TrackingApp.h  main.cpp
app_tracking/: CMakeLists.txt  MouseEmulationApp.cpp  MouseEmulationApp.h  main.cpp
connection/: CMakeLists.txt  ExampleConnection.c  libExampleConnection.vcxproj.FileListAbsolute.txt
legacy/: CalibData.cpp  CalibrationApp.cpp  CalibrationApp.h
sources/: CalibrationArea.cpp  CalibrationArea.h  GestureRecognizer.cpp  LeapConnection.cpp  LeapConnection.h  LeapConnectionSerializer.cpp  LeapConnectionSerializer.h  Utils.cpp
sources/connection/: CMakeLists.txt  ExampleConnection.c  ExampleConnection.h  libExampleConnection.lib  libExampleConnection.lib.recipe
